<resources>
    <string name="activity_settings_label">Settings</string>
    <string name="activity_about_label">About</string>
    <string name="activity_lock_label">Lock</string>
    <string name="h1_color_picker">Pick a Color</string>
    <string name="h1_delete_group">Are you sure you want to delete this group?</string>
    <string name="h1_select_group">Select Group</string>
    <string name="h1_rename_app">Rename app</string>
    <string name="h2_contributors">Contributors</string>
    <string name="h2_icons">Icons</string>
    <string name="h2_fonts">Fonts</string>
    <string name="h2_themes">Themes</string>
    <string name="h2_apps">Applications</string>
    <string name="h2_clock">Clock</string>
    <string name="h2_search">Search</string>
    <string name="h2_battery">Battery</string>
    <string name="h2_date">Date</string>
    <string name="h2_data">Data</string>
    <string name="h2_temperature">Temperature</string>
    <string name="h2_groups">Groups</string>
    <string name="h2_language">Language</string>
    <string name="h2_security">Security</string>
    <string name="h2_system">System</string>
    <string name="h2_background">Background</string>
    <string name="h2_app">App</string>
    <string name="disclaimer_delete_group">Your apps will go to the following group.</string>
    <string name="disclaimer_pick_clock_app">Selecting an app here will set it as your default clock action. When you tap the clock on your home screen, this app will be launched.</string>
    <string name="disclaimer_pick_icon_pack">Choose an installed icon pack. If an icon is missing, Mako will use the system icon for that app.</string>
    <string name="btn_unlock">Unlock</string>
    <string name="btn_go_back">Go Back</string>
    <string name="btn_apply">Apply</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_about_mako">About Mako</string>
    <string name="btn_lock">Lock</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_delete_group">Delete group</string>
    <string name="btn_join_discord">Join Discord</string>
    <string name="btn_export_data">Export Data</string>
    <string name="btn_clear_data">Clear Data</string>
    <string name="btn_theme_apply_custom">Apply Custom Theme</string>
    <string name="btn_set_default">Set Launcher as default</string>
    <string name="btn_set_clock_app">Change Clock Tap Action</string>
    <string name="btn_refresh_launcher">Refresh launcher</string>
    <string name="btn_change_wallpaper">Change OS wallpaper</string>
    <string name="btn_edit_apps">Manage Installed Apps</string>
    <string name="btn_add_group">+ Add New Group</string>
    <string name="btn_select_icon_pack">Choose icon pack</string>
    <string name="btn_font_custom_pick">Choose Font file</string>
    <string name="colorpicker_theme_foreground">Foreground</string>
    <string name="colorpicker_theme_collapsible_header">Collapsible Header</string>
    <string name="colorpicker_theme_clock">Clock</string>
    <string name="colorpicker_theme_icons">Icons</string>
    <string name="colorpicker_theme_accent">Accent</string>
    <string name="colorpicker_theme_background_1">Background 1</string>
    <string name="colorpicker_theme_background_2">Background 2</string>
    <string name="colorpicker_theme_background_3">Background 3</string>
    <string name="colorpicker_theme_input_background">Input Background</string>
    <string name="colorpicker_theme_button_1_background">Button 1 Background</string>
    <string name="colorpicker_theme_button_2_background">Button 2 Background</string>
    <string name="colorpicker_theme_danger">Danger</string>
    <string name="filepicker_selected_icon_pack">Selected pack: %1$s</string>
    <string name="filepicker_icon_pack_not_selected">No icon pack selected</string>
    <string name="filepicker_font_custom_none">No font selected</string>
    <string name="radio_default">Default</string>
    <string name="radio_default_system">Default (System)</string>
    <string name="radio_none">None</string>
    <string name="radio_language_system_default">System Default (fallback to English)</string>
    <string name="radio_language_english" translatable="false">English</string>
    <string name="radio_language_german" translatable="false">Deutsch</string>
    <string name="radio_language_turkish" translatable="false">Türkçe</string>
    <string name="radio_icons_monochrome">Monochrome</string>
    <string name="radio_custom_icon_pack">Custom icon pack</string>
    <string name="radio_clock_none">Hide clock</string>
    <string name="radio_clock_24">24-hour</string>
    <string name="radio_clock_12">12-hour (AM/PM)</string>
    <string name="radio_celsius">Celsius</string>
    <string name="radio_fahrenheit">Fahrenheit</string>
    <string name="radio_font_custom">Custom font</string>
    <string name="radio_background_wallpaper">Show Wallpaper on Home Screen</string>
    <string name="radio_theme_rama">Rama</string>
    <string name="radio_theme_custom">Custom</string>
    <string name="checkbox_lock_settings">Lock Settings</string>
    <string name="checkbox_show_profile_indicator">Show profile indicator</string>
    <string name="checkbox_show_battery_temperature">Show battery temperature</string>
    <string name="checkbox_show_battery_charge_status">Show battery charge status</string>
    <string name="checkbox_show_ungrouped_apps">Show ungrouped apps</string>
    <string name="checkbox_has_collapsible_groups">Allow collapsing groups</string>
    <string name="checkbox_show_search">Show search bar</string>
    <string name="checkbox_show_battery">Show battery</string>
    <string name="checkbox_show_system_bar">Show system bar</string>
    <string name="checkbox_show_date">Show date</string>
    <string name="checkbox_show_clock">Show clock</string>
    <string name="checkbox_show_year_day">Show day of the year</string>
    <string name="checkbox_show_group_header">Show group header</string>
    <string name="checkbox_randomized_keypad">Randomized keypad</string>
    <string name="checkbox_always_show_search_bar">Always visible</string>
    <string name="ctxmenu_rename_app">Rename app...</string>
    <string name="ctxmenu_add_to_favorites">Change group...</string>
    <string name="ctxmenu_open_settings">App settings...</string>
    <string name="hint_search_apps">Search apps...</string>
    <string name="toast_no_clock_app_found">No clock app found</string>
    <string name="toast_unable_open_settings">Unable to open launcher settings</string>
    <string name="toast_unable_open_wallpaper_app">No wallpaper app available</string>
    <string name="toast_unable_launch_app">Unable to launch app</string>
    <string name="toast_reset_done">Reset done</string>
    <string name="toast_reset_failed">Reset failed</string>
    <string name="toast_clock_app_selected">Selected: %1$s</string>
    <string name="toast_group_label_updated">Label Updated</string>
    <string name="toast_select_target_group">Select a target group</string>
    <string name="toast_label_changed">App label updated</string>
    <string name="toast_pin_saved">PIN saved</string>
    <string name="toast_pin_too_short">PIN must be at least 1 digits</string>
    <string name="toast_icon_pack_selected">Selected icon pack: %1$s</string>
    <string name="toast_monochrome_fallback">Monochrome icons require Android 13+, using fallback where unavailable</string>
    <string name="toast_no_icon_pack_found">No compatible icon pack found</string>
    <string name="toast_invalid_color">Invalid color</string>
    <string name="altdescr_search_icon">Toggle search</string>
    <string name="altdescr_clear_search">Clear search</string>
    <string name="altdescr_toggle_group_visibility">Toggle group visibility</string>
    <string name="altdescr_ascend_group">Move group up</string>
    <string name="altdescr_descend_group">Move group down</string>
    <string name="altdescr_save">Save</string>
    <string name="altdescr_delete_group">Delete group</string>
    <string name="altdescr_toggle_pin_visibility">Toggle PIN visibility</string>
    <string name="altdescr_save_pin">Save PIN</string>
    <string name="app_name" translatable="false">Mako</string>
    <string name="app_creator" translatable="false">Pombo</string>
    <string name="app_desc">A lightweight, distraction-free Android launcher that’s privacy-first and entirely on-device, designed for focus and simplicity.</string>
    <string name="app_background_tasks_desc">No Background Tasks</string>
    <string name="app_ads_desc">No Ads</string>
    <string name="app_trackers_desc">No Trackers</string>
    <string name="app_offline_desc">Works Offline</string>
    <string name="product_mako_url" translatable="false">github.com/rama-io/mako</string>
    <string name="product_hackernoon_creator" translatable="false">HackerNoon</string>
    <string name="product_hackernoon_name" translatable="false">Pixel Icon Library</string>
    <string name="product_hackernoon_url" translatable="false">github.com/hackernoon/pixel-icon-library</string>
    <string name="product_jersey_creator" translatable="false">Sarah Cadigan-Fried</string>
    <string name="product_jersey_name" translatable="false">Jersey 25</string>
    <string name="product_jersey_url" translatable="false">github.com/scfried/soft-type-jersey</string>
    <string name="product_dracula_creator" translatable="false">Zeno Rocha</string>
    <string name="product_dracula_name" translatable="false">Dracula</string>
    <string name="product_dracula_url" translatable="false">github.com/dracula</string>
    <string name="product_catppuccin_creator" translatable="false">Pocco</string>
    <string name="product_catppuccin_name" translatable="false">Catppuccin Moccha</string>
    <string name="product_catppuccin_url" translatable="false">github.com/catppuccin</string>
    <string name="product_tokyo_creator" translatable="false">Enkia</string>
    <string name="product_tokyo_name" translatable="false">Tokyo Night</string>
    <string name="product_tokyo_url" translatable="false">github.com/enkia/tokyo-night-vscode-theme</string>
    <string name="product_melange_creator" translatable="false">Savq</string>
    <string name="product_melange_name" translatable="false">Mélange Dark</string>
    <string name="product_melange_url" translatable="false">github.com/savq/melange-nvim</string>
    <string name="license_gpl3" translatable="false">GPL 3.0 or Later</string>
    <string name="license_ofl_1_1" translatable="false">OFL 1.1</string>
    <string name="license_apache_2" translatable="false">Apache 2.0</string>
    <string name="license_cc_4" translatable="false">CC 4.0</string>
    <string name="license_mit" translatable="false">MIT</string>
    <string name="contributor_isotjs" translatable="false">isotjs</string>
    <string name="contributor_isotjs_url" translatable="false">github.com/isotjs</string>
    <string name="contributor_etwasmitbaum" translatable="false">etwasmitbaum</string>
    <string name="contributor_etwasmitbaum_url" translatable="false">github.com/etwasmitbaum</string>
    <string name="settings_section_expand_indicator" translatable="false">[+]</string>
    <string name="settings_section_collapse_indicator" translatable="false">[-]</string>
    <string name="new_group_header">------ New Group</string>
    <string name="new_group_header_count">------ New Group %d</string>
    <string name="temp_warm">Warm</string>
    <string name="temp_hot">Hot</string>
    <string name="temp_critical">Critical</string>
    <string name="status_charging">Charging</string>
    <string name="status_discharging">Discharging</string>
    <string name="status_full">Full</string>
    <string name="status_not_charging">Not charging</string>
    <string name="status_unknown">Unknown</string>
    <string name="charge_usb">USB</string>
    <string name="charge_ac">AC</string>
</resources>