<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16sp"
    android:orientation="vertical"
    android:background="@color/bg_1"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:textColor="@color/foreground"
        android:text="@string/btn_select_icon_pack"
        android:gravity="center"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp"
        android:textSize="16sp"
        android:textColor="@color/foreground"
        android:text="@string/disclaimer_pick_icon_pack"
        android:gravity="center"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/icon_pack_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@null"
        android:padding="16sp"
        android:background="@color/bg_2"
        android:layout_marginBottom="8sp"
        android:dividerHeight="0dp" />

    <com.rama.mako.widgets.WdButton
        android:id="@+id/close_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_1"
        android:text="@string/btn_go_back" />
</LinearLayout>
